--- a/CodificaAtividade05/multi-app/package.json
+++ b/CodificaAtividade05/multi-app/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "json-server": "^1.0.0-beta.1",
+    "jsonwebtoken": "^9.0.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
